--- a/config/pipeline.yaml
+++ b/config/pipeline.yaml
@@ -7,7 +7,7 @@ asr:
 
 rag:
   embed_model: sentence-transformers/all-MiniLM-L6-v2
-  persist_dir: data/rag/chroma_db
+  persist_dir: data/rag/faiss_index
   top_k: 3
   chunk_size: 512
   chunk_overlap: 64
