--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-# ASR
-openai-whisper>=20231117
+# ASR (train + inference via Hugging Face Transformers)
 transformers>=4.36.0
+torch>=2.0.0
 datasets>=2.16.0
 accelerate>=0.25.0
 evaluate>=0.4.0
