--- a/config/pipeline.yaml
+++ b/config/pipeline.yaml
@@ -20,6 +20,9 @@ llm:
 
 tts:
   provider: piper
-  voice: en_US-lessac-medium  # or path to .onnx + .json
-  # voice: vi_VN-vais1000-medium
+  voice: en_US-lessac-medium  # default / fallback
+  # TTS voice theo ngôn ngữ ASR (language code -> voice id)
+  voices_by_language:
+    vi: vi_VN-vais1000-medium
+    en: en_US-lessac-medium
   output_sample_rate: 22050
